# holohub

applications/: CMakeLists.txt
applications/depth_and_pose/: CMakeLists.txt  Dockerfile  depth_and_pose.py  depth_and_pose.yaml  metadata.json
applications/openigtlink_3dslicer/: CMakeLists.txt  Dockerfile  README.md
applications/openigtlink_3dslicer/cpp/: CMakeLists.txt  openigtlink_3dslicer.yaml
applications/openigtlink_3dslicer/python/: CMakeLists.txt  openigtlink_3dslicer.py  openigtlink_3dslicer.yaml
applications/openigtlink_3dslicer/scene/: openigtlink_3dslicer.mrb
applications/ultrasound_segmentation/python/: Dockerfile  README.md  metadata.json  qt_app.py  ultrasound_segmentation.py  ultrasound_segmentation.yaml
operators/openigtlink/: CMakeLists.txt  openigtlink_tx.cpp
